--- a/StkCommon.Data.Test/StkCommon.Data.Test.csproj
+++ b/StkCommon.Data.Test/StkCommon.Data.Test.csproj
@@ -58,6 +58,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Diagnostics\ExceptionHandlerBaseTest.cs" />
+    <Compile Include="Extensions\CustomAttributeProviderExtensionsTest.cs" />
+    <Compile Include="Extensions\DescriptionExtensionsTest.cs" />
+    <Compile Include="Extensions\EnumExtensionsTest.cs" />
     <Compile Include="NotifyPropertyChangedBaseTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PropertyNameTest.cs" />
@@ -74,6 +77,10 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Common\" />
+    <Folder Include="Repositories\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\common_info.targets" />
