--- a/StkCommon.UI.Wpf.Theme/StkCommon.UI.Wpf.Theme.csproj
+++ b/StkCommon.UI.Wpf.Theme/StkCommon.UI.Wpf.Theme.csproj
@@ -31,7 +31,7 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>..\..\..\..\..\Bin\StkCommon\1.1\</OutputPath>
+    <OutputPath>bin\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
