--- a/StkCommon.TestUtils/StkCommon.TestUtils.csproj
+++ b/StkCommon.TestUtils/StkCommon.TestUtils.csproj
@@ -66,7 +66,10 @@
       <Link>Properties\VersionAssemblyInfo.cs</Link>
     </Compile>
     <Compile Include="AutoMockerTestsBase.cs" />
+    <Compile Include="ElapsedUtils.cs" />
     <Compile Include="EnumsComparer.cs" />
+    <Compile Include="ExecuteUtils.cs" />
+    <Compile Include="FileUtils.cs" />
     <Compile Include="MockDataBase\MockCommand.cs" />
     <Compile Include="MockDataBase\MockCommandData.cs" />
     <Compile Include="MockDataBase\MockDb.cs" />
