--- a/StkCommon.Data/StkCommon.Data.csproj
+++ b/StkCommon.Data/StkCommon.Data.csproj
@@ -56,7 +56,7 @@
     <Compile Include="Diagnostics\IExceptionNotifier.cs" />
     <Compile Include="Diagnostics\ISimpleLogger.cs" />
     <Compile Include="Diagnostics\TraceFailExceptionNotifier.cs" />
-    <Compile Include="EqutableByKey.cs" />
+    <Compile Include="EquatableByKey.cs" />
     <Compile Include="Extensions\CustomAttributeProviderExtensions.cs" />
     <Compile Include="Extensions\DictionaryExtensions.cs" />
     <Compile Include="Extensions\EnumExtensions.cs" />
