--- a/StkCommon.Data/StkCommon.Data.nuspec
+++ b/StkCommon.Data/StkCommon.Data.nuspec
@@ -4,11 +4,13 @@
     <id>$id$</id>
     <version>$version$</version>
     <title>$title$</title>
-    <authors>$author$</authors>
+    <authors>Sergey Sivolovskiy</authors>
+    <owners>$author$</owners>
     <description>$description$</description>
     <projectUrl>https://github.com/sevacom/sevacom.stkcommon</projectUrl>
     <releaseNotes />
     <copyright>$copyright$</copyright>
+    <tags>common utils data</tags>
 	</metadata>
 	<files>
     <file src="bin\$configuration$\$id$.dll" target="lib\net40\" />
